// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamMember component should be equal forsyte snapshot 1`] = `
<DocumentFragment>
  <div
    class="team"
  >
    <div
      class="team__info"
    >
      <img
        alt="Forsyte Alex"
        class="team__photo"
      />
      <div
        class="team__details"
      >
        <h3
          class="team__name"
        >
          Forsyte Alex
        </h3>
        <h4
          class="team__role"
        >
          Team Lead
        </h4>
        <a
          class="team__github"
          href="https://github.com/forsyterun"
          rel="noreferrer"
          target="_blank"
          title="Forsyte Alex GitHub"
        >
          forsyterun
        </a>
        <div>
          <h4
            class="team__contribution_title"
          >
            Contribution
          </h4>
          <ul
            class="team__contribution_list"
          >
            <li>
              JavaScript
            </li>
            <li>
              Python
            </li>
            <li>
              Java
            </li>
            <li>
              C++
            </li>
            <li>
              C#
            </li>
            <li>
              TypeScript
            </li>
            <li>
              Ruby
            </li>
            <li>
              Swift
            </li>
            <li>
              Go
            </li>
            <li>
              Kotlin
            </li>
            <li>
              Rust
            </li>
            <li>
              PHP
            </li>
            <li>
              HTML
            </li>
            <li>
              CSS
            </li>
          </ul>
        </div>
      </div>
    </div>
    <h4
      class="team__about_title"
    >
      About
    </h4>
    <p
      class="team__about"
    >
      I\`m is a Ukrainian singer, producer, and DJ known for his contributions to the pop and electronic music scenes. Born on October 17, 1988, in Chelyabinsk, Russia,
    </p>
  </div>
</DocumentFragment>
`;

exports[`TeamMember component should be equal forsyte snapshot 2`] = `
<DocumentFragment>
  <div
    class="team"
  >
    <div
      class="team__info"
    >
      <img
        alt="Katsiaryna"
        class="team__photo"
      />
      <div
        class="team__details"
      >
        <h3
          class="team__name"
        >
          Katsiaryna
        </h3>
        <h4
          class="team__role"
        >
          Developer
        </h4>
        <a
          class="team__github"
          href="https://github.com/Katsiaryna"
          rel="noreferrer"
          target="_blank"
          title="Katsiaryna GitHub"
        >
          Katsiaryna
        </a>
        <div>
          <h4
            class="team__contribution_title"
          >
            Contribution
          </h4>
          <ul
            class="team__contribution_list"
          >
            <li>
              JavaScript
            </li>
            <li>
              Python
            </li>
            <li>
              Java
            </li>
            <li>
              C++
            </li>
            <li>
              C#
            </li>
            <li>
              TypeScript
            </li>
            <li>
              Ruby
            </li>
            <li>
              Swift
            </li>
            <li>
              Go
            </li>
            <li>
              Kotlin
            </li>
            <li>
              Rust
            </li>
            <li>
              PHP
            </li>
            <li>
              HTML
            </li>
            <li>
              CSS
            </li>
          </ul>
        </div>
      </div>
    </div>
    <h4
      class="team__about_title"
    >
      About
    </h4>
    <p
      class="team__about"
    >
      I\`m is a Ukrainian singer, producer, and DJ known for his contributions to the pop and electronic music scenes. Born on October 17, 1988, in Chelyabinsk, Russia,
    </p>
  </div>
</DocumentFragment>
`;

exports[`TeamMember component should be equal forsyte snapshot 3`] = `
<DocumentFragment>
  <div
    class="team"
  >
    <div
      class="team__info"
    >
      <img
        alt="nyurasheva"
        class="team__photo"
      />
      <div
        class="team__details"
      >
        <h3
          class="team__name"
        >
          nyurasheva
        </h3>
        <h4
          class="team__role"
        >
          Developer
        </h4>
        <a
          class="team__github"
          href="https://github.com/nyurasheva"
          rel="noreferrer"
          target="_blank"
          title="nyurasheva GitHub"
        >
          nyurasheva
        </a>
        <div>
          <h4
            class="team__contribution_title"
          >
            Contribution
          </h4>
          <ul
            class="team__contribution_list"
          >
            <li>
              JavaScript
            </li>
            <li>
              Python
            </li>
            <li>
              Java
            </li>
            <li>
              C++
            </li>
            <li>
              C#
            </li>
            <li>
              TypeScript
            </li>
            <li>
              Ruby
            </li>
            <li>
              Swift
            </li>
            <li>
              Go
            </li>
            <li>
              Kotlin
            </li>
            <li>
              Rust
            </li>
            <li>
              PHP
            </li>
            <li>
              HTML
            </li>
            <li>
              CSS
            </li>
          </ul>
        </div>
      </div>
    </div>
    <h4
      class="team__about_title"
    >
      About
    </h4>
    <p
      class="team__about"
    >
      I\`m is a Ukrainian singer, producer, and DJ known for his contributions to the pop and electronic music scenes. Born on October 17, 1988, in Chelyabinsk, Russia,
    </p>
  </div>
</DocumentFragment>
`;
